# livrarr

./: .dockerignore  .gitignore  Dockerfile  README.md  conventions.md  review_output.json
.cargo/: config.toml
.github/workflows/: build-arm64.yml  ci.yml  release.yml
crates/livrarr-behavioral/: Cargo.toml
crates/livrarr-behavioral/src/: stubs.rs
crates/livrarr-cli/: Cargo.toml
crates/livrarr-db/: Cargo.toml
crates/livrarr-db/migrations/: 035_enrichment_status_rename.sql  036_library_item_tag_tracking.sql  038_normalized_identity.sql  039_work_identity_anchors.sql  040_work_identity_conflicts.sql  041_anchor_user_uniqueness.sql  042_fix_anchor_user_scope.sql  043_backfill_ol_anchors.sql  044_anchor_per_user_uniqueness.sql
crates/livrarr-db/src/: cross_user_isolation_tests.rs  lib.rs  pool.rs  sqlite_external_id.rs  sqlite_identity_conflict.rs  sqlite_import.rs  sqlite_library_item.rs  sqlite_provenance.rs  sqlite_retry_state.rs  sqlite_work.rs  sqlite_work_identity.rs
crates/livrarr-domain/: Cargo.toml
crates/livrarr-domain/src/: identity.rs  lib.rs  readarr.rs  tests_metadata_redesign.rs  text_norm.rs  title_cleanup.rs
crates/livrarr-domain/src/services/: enrichment.rs  identity_conflict.rs  identity_resolver.rs  import_service.rs  llm.rs  mod.rs  work.rs  work_identity.rs
crates/livrarr-download/: Cargo.toml
crates/livrarr-handlers/: Cargo.toml
crates/livrarr-handlers/src/: context.rs  history.rs  identity_conflicts.rs  lib.rs  manual_import.rs  mediacover.rs  notification.rs  opds.rs  root_folder.rs  work.rs
crates/livrarr-handlers/src/types/: api_error.rs  pagination.rs  work.rs
crates/livrarr-http/: Cargo.toml
crates/livrarr-jobs/: Cargo.toml
crates/livrarr-library/: Cargo.toml
crates/livrarr-library/src/: import_workflow.rs
crates/livrarr-matching/: Cargo.toml
crates/livrarr-matching/src/: m1_embedded.rs  m2_path.rs  m3_string.rs  work_dedup.rs
crates/livrarr-metadata/: Cargo.toml
crates/livrarr-metadata/src/: author_monitor_workflow.rs  author_service.rs  bulk_resolver.rs  cover_gate.rs  english_identity_resolver.rs  enrichment_workflow_service.rs  goodreads.rs  language.rs  lib.rs  list_service.rs  llm_caller_service.rs  llm_ewl.rs  llm_scraper.rs  llm_validator.rs  ol_resolver_client.rs  provider_client.rs  provider_queue.rs  series_query_service.rs  title_cleanup.rs  work_service.rs
crates/livrarr-server/: Cargo.toml
crates/livrarr-server/src/: api_secondary_impl.rs  auth_crypto.rs  import_io_service.rs  import_service.rs  main.rs  manual_import_service.rs  readarr_import_service.rs  readarr_import_workflow.rs  router.rs  state.rs  tag_service.rs
crates/livrarr-server/src/infra/: import_pipeline.rs
crates/livrarr-server/src/jobs/: enrichment.rs  maintenance.rs  mod.rs  repair.rs  tag_convergence.rs
crates/livrarr-server/src/services/: identity_conflict_service.rs  mod.rs  settings_service.rs
crates/livrarr-tagwrite/: Cargo.toml
docs/: ARCHITECTURE.md  english-work-lifecycle-handoff.md
frontend/: package.json  vite.config.ts
frontend/src/api/: index.ts
frontend/src/components/: UrlInput.tsx
frontend/src/components/Page/: ConfirmModal.tsx  FormModal.tsx
frontend/src/components/Sidebar/: Sidebar.tsx
frontend/src/pages/import/: ReadarrImportPage.tsx
frontend/src/pages/settings/indexers/: IndexersPage.tsx
frontend/src/pages/settings/metadata/: MetadataPage.tsx
frontend/src/pages/works/: WorksPage.tsx
frontend/src/stores/: ui.ts
frontend/src/types/: api.ts
frontend/src/utils/: works.ts
tests/behavioral/: test_consolidation_author_monitor.rs  test_consolidation_list_service.rs  test_consolidation_release_service.rs  test_consolidation_rss_sync.rs  test_consolidation_work_service.rs  test_metadata_overhaul_enrichment_service.rs  test_metadata_overhaul_external_id_db.rs  test_metadata_overhaul_merge_engine.rs  test_metadata_overhaul_provenance_db.rs  test_metadata_overhaul_retry_state_db.rs  test_metadata_overhaul_work_db_merge.rs  test_metadata_redesign_phase2.rs  test_metadata_redesign_phase3a.rs  test_metadata_redesign_phase3b_6_7.rs  test_metadata_redesign_phase4_5.rs  test_stress_phase4a.rs
wiki/: index.md  log.md
wiki/architecture/: metadata-pathway-diagram.html  metadata-pathway-pseudocode.html  metadata-pathway.md  overview.md
wiki/domain/: metadata-principles.md
