[package]
name = "livrarr-behavioral"
version = "0.1.0-alpha4"
edition = "2021"
license = "GPL-3.0-only"
publish = false

[dependencies]
livrarr-domain = { workspace = true }
livrarr-db = { workspace = true, features = ["test-helpers"] }
tokio = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
trait-variant = { workspace = true }
livrarr-domain = { workspace = true }
livrarr-db = { workspace = true, features = ["test-helpers"] }
livrarr-metadata = { workspace = true }
livrarr-download = { workspace = true }
livrarr-library = { workspace = true }
livrarr-http = { workspace = true }
axum = "0.8"
assert_matches = "1"
futures = "0.3"
tempfile = "3"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }

[[test]]
name = "test_metadata_overhaul_domain"
path = "../../tests/behavioral/test_metadata_overhaul_domain.rs"

[[test]]
name = "test_metadata_overhaul_work_db_merge"
path = "../../tests/behavioral/test_metadata_overhaul_work_db_merge.rs"

[[test]]
name = "test_metadata_overhaul_provenance_db"
path = "../../tests/behavioral/test_metadata_overhaul_provenance_db.rs"

[[test]]
name = "test_metadata_overhaul_retry_state_db"
path = "../../tests/behavioral/test_metadata_overhaul_retry_state_db.rs"

[[test]]
name = "test_metadata_overhaul_external_id_db"
path = "../../tests/behavioral/test_metadata_overhaul_external_id_db.rs"

[[test]]
name = "test_metadata_overhaul_merge_engine"
path = "../../tests/behavioral/test_metadata_overhaul_merge_engine.rs"

[[test]]
name = "test_metadata_overhaul_enrichment_service"
path = "../../tests/behavioral/test_metadata_overhaul_enrichment_service.rs"

[[test]]
name = "test_metadata_overhaul_provider_queue"
path = "../../tests/behavioral/test_metadata_overhaul_provider_queue.rs"

# --- Consolidation behavioral tests ---

[[test]]
name = "test_consolidation_http_fetcher"
path = "../../tests/behavioral/test_consolidation_http_fetcher.rs"

[[test]]
name = "test_consolidation_llm_caller"
path = "../../tests/behavioral/test_consolidation_llm_caller.rs"

[[test]]
name = "test_consolidation_file_ops"
path = "../../tests/behavioral/test_consolidation_file_ops.rs"

[[test]]
name = "test_consolidation_work_service"
path = "../../tests/behavioral/test_consolidation_work_service.rs"

[[test]]
name = "test_consolidation_author_service"
path = "../../tests/behavioral/test_consolidation_author_service.rs"

[[test]]
name = "test_consolidation_series_service"
path = "../../tests/behavioral/test_consolidation_series_service.rs"

[[test]]
name = "test_consolidation_release_service"
path = "../../tests/behavioral/test_consolidation_release_service.rs"

[[test]]
name = "test_consolidation_grab_service"
path = "../../tests/behavioral/test_consolidation_grab_service.rs"

[[test]]
name = "test_consolidation_file_service"
path = "../../tests/behavioral/test_consolidation_file_service.rs"

[[test]]
name = "test_consolidation_list_service"
path = "../../tests/behavioral/test_consolidation_list_service.rs"

[[test]]
name = "test_consolidation_import_workflow"
path = "../../tests/behavioral/test_consolidation_import_workflow.rs"

[[test]]
name = "test_consolidation_enrichment_workflow"
path = "../../tests/behavioral/test_consolidation_enrichment_workflow.rs"

[[test]]
name = "test_consolidation_rss_sync"
path = "../../tests/behavioral/test_consolidation_rss_sync.rs"

[[test]]
name = "test_consolidation_author_monitor"
path = "../../tests/behavioral/test_consolidation_author_monitor.rs"

[[test]]
name = "test_consolidation_dto"
path = "../../tests/behavioral/test_consolidation_dto.rs"

[[test]]
name = "test_stress_phase4a"
path = "../../tests/behavioral/test_stress_phase4a.rs"

# --- English work lifecycle behavioral test skeletons ---

[[test]]
name = "test_ewl_text_norm"
path = "../../tests/behavioral/test_ewl_text_norm.rs"

[[test]]
name = "test_ewl_work_identity"
path = "../../tests/behavioral/test_ewl_work_identity.rs"

[[test]]
name = "test_ewl_conflict_service"
path = "../../tests/behavioral/test_ewl_conflict_service.rs"

[[test]]
name = "test_ewl_resolver"
path = "../../tests/behavioral/test_ewl_resolver.rs"

[[test]]
name = "test_ewl_bulk_resolver"
path = "../../tests/behavioral/test_ewl_bulk_resolver.rs"

[[test]]
name = "test_ewl_cover_gate"
path = "../../tests/behavioral/test_ewl_cover_gate.rs"

[[test]]
name = "test_ewl_llm"
path = "../../tests/behavioral/test_ewl_llm.rs"

[[test]]
name = "test_ewl_work_service_add"
path = "../../tests/behavioral/test_ewl_work_service_add.rs"

[[test]]
name = "test_ewl_enrichment"
path = "../../tests/behavioral/test_ewl_enrichment.rs"

[[test]]
name = "test_ewl_merge_engine"
path = "../../tests/behavioral/test_ewl_merge_engine.rs"

[[test]]
name = "test_ewl_open_library"
path = "../../tests/behavioral/test_ewl_open_library.rs"

[[test]]
name = "test_ewl_goodreads"
path = "../../tests/behavioral/test_ewl_goodreads.rs"

[[test]]
name = "test_ewl_conflict_repo"
path = "../../tests/behavioral/test_ewl_conflict_repo.rs"

[[test]]
name = "test_ewl_sqlite_work"
path = "../../tests/behavioral/test_ewl_sqlite_work.rs"

[[test]]
name = "test_ewl_work_db"
path = "../../tests/behavioral/test_ewl_work_db.rs"

[[test]]
name = "test_ewl_provider_retry_state"
path = "../../tests/behavioral/test_ewl_provider_retry_state.rs"

[[test]]
name = "test_ewl_handlers"
path = "../../tests/behavioral/test_ewl_handlers.rs"

[[test]]
name = "test_ewl_repair"
path = "../../tests/behavioral/test_ewl_repair.rs"

[[test]]
name = "test_ewl_readarr_import"
path = "../../tests/behavioral/test_ewl_readarr_import.rs"

[[test]]
name = "test_ewl_manual_import_scan"
path = "../../tests/behavioral/test_ewl_manual_import_scan.rs"

# --- End English work lifecycle behavioral test skeletons ---
